--- a/style.css
+++ b/style.css
@@ -15,14 +15,6 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
-.selection{
-    list-style-position: inside;
-    text-align: center; 
-    display: inline;
-    padding-left: 40%;
-
-}
-
 img{
     margin-left: auto;
     margin-right: auto;
@@ -40,4 +32,19 @@ img{
 
 #dayold{
     background-color: #fde05f;
+
+}
+
+.menu{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    margin: 20px 30%;
+    background-color: #fde05f;
+    padding: 24px;
+    font-size: 24px;
+    border-radius: 8px;
+    border: 16px dashed black;
+    border-width: 16px;
+
+
 }
